--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 </head>
 <body>
-    <!-- NEW: Title with ID for styling -->
     <h1 id="game-title">BONKMAN</h1>
 
     <div class="game-container">
@@ -20,7 +19,6 @@
             <p>Score: <span id="score">0</span></p>
             <p>Level: <span id="level">1</span></p>
 
-            <!-- NEW: Clickable box linking to X profile -->
             <a href="https://x.com/wagbonk" target="_blank" class="wagbonk-link">
                 <div class="wagbonk-box">
                     Join WAGBONK
@@ -29,14 +27,14 @@
         </div>
     </div>
 
-    <!-- NEW: Pop-up modal for level announcements -->
     <div id="level-popup" class="hidden">
         <p>Level <span id="popup-level-number">1</span></p>
     </div>
 
-    <!-- NEW: Audio elements, hidden from view -->
+    <!-- Audio elements - HIDDEN FROM VIEW -->
     <audio id="eat-coin-sound" src="assets/eat_coin.mp3"></audio>
-    <audio id="death-sound" src="assets.death.mp3"></audio>
+    <!-- THE FIX IS ON THE NEXT LINE -->
+    <audio id="death-sound" src="assets/death.mp3"></audio>
     <audio id="powerup-sound" src="assets/powerup_sound.mp3"></audio>
     <audio id="game-over-sound" src="assets/game_over.mp3"></audio>
     <audio id="level-up-sound" src="assets/level_up.mp3"></audio>
