--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <!-- Audio elements - HIDDEN FROM VIEW -->
     <audio id="eat-coin-sound" src="assets/eat_coin.mp3"></audio>
     <!-- THE FIX IS ON THE NEXT LINE -->
-    <audio id="death-sound" src="assets/death.mp3"></audio>
+    <audio id="death-sound" src="assets.death.mp3"></audio>
     <audio id="powerup-sound" src="assets/powerup_sound.mp3"></audio>
     <audio id="game-over-sound" src="assets/game_over.mp3"></audio>
     <audio id="level-up-sound" src="assets/level_up.mp3"></audio>
